# Suffix-Tree-Array-and-String-Linearization-

./: CMakeLists.txt  README.md  edge.cpp  edge.h  main.cpp  suffixTree.cpp  suffixTree.h
Circular Linearization/: linearization.cpp  linearization.h
String Array/: suffixArray.cpp  suffixArray.h
test-Cases/: linearizationSanityCheck.cpp  suffixArraySanityCheck.cpp  suffixTreeSanityCheck.cpp
